Layout z-index fix.

--- a/src/static/styles/Layout.css
+++ b/src/static/styles/Layout.css
@@ -1,5 +1,6 @@
 .Header {
   position: sticky;
+  z-index: 999;
 }
 
 .page {
